2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_set_simcmd): Implemented. Writing a 'one'
	to the register will stop the simulation.
	* epiphany-sim.h (epiphanybf_set_simcmd): Add function prototype.
	* esim/esim.c (es_client_stop_cores): Implemented.
	(es_client_disconnect): Add stop parameter.
	* esim/esim.h (es_client_disconnect): Update function prototype.

2015-12-07  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (AS_FOR_TARGET): Don't use in-build-tree host
	assembler when building a Canadian cross.

2015-12-07  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (install-esim): Install esim/esim.h.

2015-12-04  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.in (install-esim): Rename from esim-install. Install
	libesim.so.
	(SIM_EXTRA_CFLAGS): Append -fPIC.
	(SIM_EXTRA_ALL): Build libesim.so.
	(SIM_EXTRA_INSTALL): Append libesim.so.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Change default paramters.
	rows=cols=32. first_core=0x020
	* sim-if.c (sim_esim_have_required_params): Change
	default e-first-core to 0x020.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_addr_translate): Make access to area above end of
	memory mapped registers illegal.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_validate_cluster_cfg): Relax constraints: allow
	uneven number of cores and uneven base column.
	Fix coreid range check.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_mem.c (epiphany_mem_io_read_buffer): Fix trace output
	formatting.
	(epiphany_mem_io_write_buffer): Likewise.

2015-11-29  Ola Jeppsson  <ola@adapteva.com>

	* ert-workgroup.h: New file.
	* esim/esim.c (es_get_cluster_cfg): New function.
	* esim/esim.h (es_get_cluster_cfg: Add function prototype.
	* sim-if.c (setup_workgroup_cfg): New function. If workgroup_cfg
	section is present in binary, fill in mesh properties.
	(sim_create_inferior): Call setup_workgroup_cfg (), unless in
	operating environment.
